# ni-3d-prototype

./: Cargo.toml  workspace.code-workspace
docs/: Specs.md
src/: egui_example.rs  learn_wgpu.rs  log_test.rs  main.rs  prelude.rs  tests.rs
src/learn_wgpu/: the_pipeline.rs  the_surface.rs
src/log_test/: inner_log_test.rs
