[package]
name = "ni-3d-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# WGPU requires cargo resolver v2
resolver = "2"

[dependencies]
egui_wgpu_backend = "0.16.0"
chrono = "0.4"
epi = "0.16.0"
egui_winit_platform = "0.13.0"
egui_demo_lib = "0.16.0"
egui = "0.16.1"

image = "0.23"
winit = "0.26.1"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12.0"
pollster = "0.2"
async-trait = "0.1.52"